# rework-pysatl-mpest

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/: dependabot.yml
.github/workflows/: check.yml  docs.yml
_modules/: index.html
_modules/rework_pysatl_mpest/core/: mixture.html  parameter.html
_modules/rework_pysatl_mpest/distributions/: beta.html  cauchy.html  continuous_dist.html  exponential.html  normal.html  pareto.html  uniform.html  weibull.html
_modules/rework_pysatl_mpest/estimators/: base_estimator.html  ecm.html
_sources/: index.rst.txt
_sources/api/: index.rst.txt  modules.rst.txt  mpest.core.rst.txt  mpest.em.breakpointers.rst.txt  mpest.em.distribution_checkers.rst.txt  mpest.em.methods.rst.txt  mpest.em.rst.txt  mpest.models.rst.txt  mpest.optimizers.rst.txt  mpest.rst.txt
_sources/api/core/: index.rst.txt
_sources/design/: index.md.txt  tree.md.txt  usecase.md.txt  usecase_activity.md.txt
api/: index.html  modules.html  mpest.core.html  mpest.em.breakpointers.html  mpest.em.distribution_checkers.html  mpest.em.html  mpest.em.methods.html  mpest.html  mpest.models.html  mpest.optimizers.html
api/core/: index.html
api/distributions/: index.html
api/estimators/: index.html
api/initializers/: index.html
api/optimizers/: index.html
benchmarks/: README.md  asv.conf.json  index.json  info.json  regressions.json  regressions.xml
benchmarks/benchmarks/: __init__.py  bench_core.py  bench_distributions.py  bench_estimators.py  bench_imports.py  common.py
benchmarks/results/: benchmarks.json
design/: index.html  tree.html  usecase.html  usecase_activity.html
design/modules/: core.html  distributions.html  index.html  initializers.html  optimizers.html  strategies.html
docs/: full-architecture.drawio
docs/source/: conf.py  index.rst
examples/: big_mono_tests.py  diff_test.py  mono_test_generator.py  prepare_result.py  quick_test.py  utils.py
examples/readme_example/: example.py  example_ml.py
mpest/models/: exponential.py  gaussian.py  weibull.py
pysatl_mpest/: exceptions.py  typings.py
pysatl_mpest/core/: __init__.py  mixture.py  parameter.py
pysatl_mpest/distributions/: beta.py  cauchy.py  continuous_dist.py  exponential.py  normal.py  pareto.py  uniform.py  weibull.py
pysatl_mpest/estimators/: __init__.py  base_estimator.py  ecm.py  ecme.py
pysatl_mpest/initializers/: initializer.py
pysatl_mpest/optimizers/: __init__.py  optimizer.py  scipy_nelder_mead.py  scipy_powell.py
rework_pysatl_mpest/: __init__.py  typings.py
rework_pysatl_mpest/Initializers/: Initializer_example.py  __init__.py  clusterMatchStrategy.py  cluster_match_strategy.py  clusterizeInitializer.py  clusterize_initializer.py  initializer.py  q_function.py  strategies.py
rework_pysatl_mpest/algorithms/: base_estimator.py  estimator_step.py  iterative_estimator.py
rework_pysatl_mpest/arch_docs/: architecture.drawio  design.md  dir_structure.txt
rework_pysatl_mpest/core/: __init__.py  mixture.py  parameter.py
rework_pysatl_mpest/distributions/: __init__.py  beta.py  cauchy.py  continuous_dist.py  exponential.py  normal.py  pareto.py  uniform.py  weibull.py
rework_pysatl_mpest/estimators/: __init__.py  base_estimator.py  ecm.py  ecme.py
rework_pysatl_mpest/initializers/: __init__.py  cluster_match_strategy.py  clusterize_initializer.py  initializer.py  strategies.py
rework_pysatl_mpest/mpest_core/: continuous_dist.py  mixture_model.py  parameter.py
rework_pysatl_mpest/optimizers/: __init__.py  optimizer.py  scipy_nelder_mead.py  scipy_powell.py
rework_pysatl_mpest/preprocessing/: utils.py
rework_pysatl_mpest/utils/: typings.py
rework_tests/core/: test_mixture.py  test_parameter.py
rework_tests/distributions/: test_continuous_distribution.py  test_exponential.py  test_uniform.py
tests/: conftest.py
tests/experimental_env/: test_reproducibility_expenv.py
tests/helpers/: __init__.py  golden.py  math_assertions.py
tests/mocks/: __init__.py
tests/tests_moments/: moments_utils.py  test_any_distributions_complex.py  test_any_distributions_simple.py  test_one_distribution.py  test_two_same_distributions_complex.py  test_two_same_distributions_simple.py
user_guide/: index.html
(+514 files in other folders)
